--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <a href="index.html#home"><div class="site-title">Gustavo <span>Moreno</span></div></a>
+            <a href="index.html#home"><div class="site-title">Matheus <span>Macedo</span></div></a>
           </div>
 
           <!-- Navigation -->
@@ -104,9 +104,7 @@
                       </div>
 
                       <div class="social-links">
-                        <a href="https:www.twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i>
-                        <a href="https://www.linkedin.com/in/gustavo-moreno-5803a0229/" target="_blank"><i class="fa-brands fa-linkedin"></i>
-                        <a href="https://www.instragram.com/gustavo_moreno_veiga" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="ADICIONAR LINK DO LINKEDIN" target="_blank"><i class="fa-brands fa-linkedin"></i>
                       </div>
                     </div>
                   </div>
@@ -120,7 +118,7 @@
                         <div class="block-title">
                           <h3>Quem <span>Sou?</span></h3>
                         </div>
-                        <p>Olá Mundo! Me chamo Matheus Macedo e é um prazer em te conhecer! sou aluno de ADS e
+                        <p>Olá! Me chamo Matheus Macedo! Atualmente sou aluno de ADS e
                           este é o meu curriculo online, espero que aqui você encontre as informações que precisar sobre mim. 
                         </p>
                       </div>
@@ -136,7 +134,7 @@
                         <li><span class="title">Cidade/Estado</span><span class="value">Suzano, SP</span></li>
                         <li><span class="title">E-mail</span><span class="value">mmacedo41@hotmail.com</span></li>
                         <li><span class="title">Fone</span><span class="value">+5511 99921-9100</span></li>
-                        <li><span class="title">Freelance</span><span class="value available">Disponível</span></li>
+                        <li><span class="title">Vaga</span><span class="value available">Disponível</span></li>
                       </ul>
                     </div>
 
@@ -173,19 +171,19 @@
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Idioma</h4>
-                            <span class="item-period">2016/2021</span>
-                            <span class="item-small">Cultura e Idiomas.</span>
-                            <p class="item-description">Curso de inglês como língua estrangeira na empresa Cultura e Idiomas, nível de inglês avançado.</p>
+                            <h4 class="item-title">Curso de Inglês</h4>
+                            <span class="item-period">2019 - 2020</span>
+                            <span class="item-small">Smart School</span>
+                            <p class="item-description">Cursei Inglês por um ano em uma escola técnica localizada em Suzano - SP</p>
                           </div>
                           <!-- / Education 2 -->
 
                           <!-- Education 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Curso de Git e GitHub</h4>
-                            <span class="item-period">2022</span>
-                            <span class="item-small">Geek University</span>
-                            <p class="item-description">Curso completo de Git e GitHub feito na plataforma Udemy.</p>
+                            <h4 class="item-title">INFORMÁTICA</h4>
+                            <span class="item-period">2018</span>
+                            <span class="item-small">SENAI</span>
+                            <p class="item-description">Concluido curso de informática no Senai no ano de 2018</p>
                           </div>
                           <!-- / Education 3 -->
                         </div>
@@ -201,35 +199,35 @@
                         <div class="timeline">
                           <!-- Experience 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Auxiliar de Mineração</h4>
-                            <span class="item-period">Set 2018 - Atualmente</span>
-                            <span class="item-small">Industrias Brasileiras de Artigos Refratários</span>
-                            <p class="item-description">Atuo na parte administrativa com o controle de pessoal. Junto a Engenheiros e Geólogos na área de mineração cuidando da parte técnica do setor, coordenando também jovens aprendizes.</p>
+                            <h4 class="item-title">Técnico de Redes</h4>
+                            <span class="item-period">2020 - Atualmente</span>
+                            <span class="item-small">TDGI</span>
+                            <p class="item-description">Atualmente estou a exercer o cargo de Técnico de Redes na TDGI.
+                              Tenho como objetivo resolver os chamados relacionados a tecnologia, desde problemas de domínio, configuração de email a problemas de HomeOffice(Conexão VPN).
+                            </p>
                           </div>
                           <!-- / Experience 1 -->
 
                           <!-- Experience 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Jovem Aprendiz</h4>
-                            <span class="item-period">Fev 2017 - Jun 2018</span>
-                            <span class="item-small">Guarda Mirim De Suzano.</span>
-                            <p class="item-description">Jovem aprendiz no setor de mineração da empresa IBAR.</p>
+                            <h4 class="item-title">Estágio de Desenvolvimento</h4>
+                            <span class="item-period">ABRIL 2022 - Jul 2022</span>
+                            <span class="item-small">TMKT</span>
+                            <p class="item-description">Obtive experiência em um estágio de Desenvolvimento na empresa TMKT, onde fui responsável
+                              por realizar a criação de diversos softwares e também de Robôs utilizando a linguagem C# e o Framework Selenium, responsável também
+                              pela manutenção e criação de procedures dentro do banco de dados SQL SERVER. Além de utilizar o Framework Angular para a criação de projetos Front End.
+                            </p>
                           </div>
                           <!-- / Experience 2 -->
 
                           <!-- Experience 3 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Freelancer</h4>
-                            <span class="item-period">Jan 2014 - Fev 2022</span>
-                            <span class="item-small">Siqueira Fotos e Filmagem.</span>
-                            <p class="item-description">Atuando como Fotografo, Cinegrafista, Editor de Fotos e videos pela empresa Siqueira Fotos e Filmagens.</p>
-                          </div>
+                              <!-- ADICIONAR A EXPERIÊNCIA PARA DEPOIS -->
                           <!-- / Experience 3 -->
                         </div>
                       </div>
                     </div>
                   </div>
-
+                  <!--
                   <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
@@ -275,7 +273,7 @@
                           </div>                        
                       </div>
                     </div>
-                  </div>
+                  </div> -->
 
                   <!-- Download Resume Button -->
                   <div class="row">
@@ -306,7 +304,7 @@
                   <div class="row">
                     <div class="col-sm-12 col-md-12">
                       <div class="block-title">
-                        <h3>Sou <span>bom em...</span></h3>
+                        <h3>Tenho <span>Experiência em...</span></h3>
                       </div>
                     </div>
 
@@ -315,10 +313,10 @@
                         <div class="service-info">
                           <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                           <div class="service-image">
-                            <img src="images/service/fotografia.png" alt="Fotografia" class="mCS_img_loaded">
+                            <img src="ADICIONAR IMAGEM" alt="ADICIONAR INFORMAÇÃO DA IMAGEM" class="mCS_img_loaded">
                           </div>
-                          <h4>Fotografia</h4>
-                          <p>Atuando desde 2014 em Freelances como Fotográfo, Cinegrafista, Editor de videos e Fotos.</p>
+                          <h4>HTML</h4>
+                          <p>HTML</p>
                         </div>
                       </div>
                     </div>
@@ -327,10 +325,10 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/adobe-photoshop.png" alt="Photoshop" class="mCS_img_loaded">
+                            <img src="ADICIONAR IMAGEM" alt="ADICIONAR DESCRIÇÃO" class="mCS_img_loaded">
                           </div>
-                          <h4>Photoshop</h4>
-                          <p>Experiencia com Photoshop desde os 14 anos, utilizando para trabalhos escolares e Freelances.</p>
+                          <h4>CSS</h4>
+                          <p>CSS</p>
                         </div>
                       </div>
                     </div>
@@ -339,10 +337,10 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/camera-drone.png" alt="Drone" class="mCS_img_loaded">
+                            <img src="ADICIONAR IMAGEM" alt="ADICIONAR DESCRIÇÃO" class="mCS_img_loaded">
                           </div>
-                          <h4>Drone</h4>
-                          <p>Experiencia em Pilotagem de Drones para Fotos e videos.</p>
+                          <h4>SQL SERVER</h4>
+                          <p>SQL SERVER</p>
                         </div>
                       </div>
                     </div>
