Atualizado background color do Layouy e Favicon alterado

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <div class="sp-subtitle">Desenvolvedor</div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle">Aluno de Analise de sistemas</div>
+                            <div class="sp-subtitle">Aluno de Desenvolvimento de Sistemas</div>
                           </div>
                         </div>
                       </div>
@@ -116,7 +116,7 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="about-me">
                         <div class="block-title">
-                          <h3>Quem <span>Sou?</span></h3>
+                          <h3>Quem é <span>Matheus?</span></h3>
                         </div>
                         <p>Olá! Me chamo Matheus Macedo! Atualmente sou aluno de ADS e
                           este é o meu curriculo online, espero que aqui você encontre as informações que precisar sobre mim. 
