Atualizado Curriculo e link de acesso

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="pt-trigger" href="index.html#resume">Currículo</a>
               </li>
               <li>
-                <a class="pt-trigger" href="index.html#services">Serviços</a>
+                <a class="pt-trigger" href="index.html#services">Habilidades</a>
               </li>
             </ul>
             <!-- /Main menu -->
@@ -104,15 +104,15 @@
                       </div>
 
                       <div class="social-links">
-                        <a href="ADICIONAR LINK DO LINKEDIN" target="_blank"><i class="fa-brands fa-linkedin"></i>
+                        <a href="ADICIONAR LINK DO LINKEDIN" target="_blank"><i class="fa-brands fa-linkedin"></i>            
+                          <a href="https://github.com/Matheus-byt" target="_blank"><i class="fa-brands fa-github"></i>
                       </div>
                     </div>
                   </div>
                 </div>
-
+                
                 <div class="page-content">
                   <div class="row">
-
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="about-me">
                         <div class="block-title">
@@ -122,8 +122,8 @@
                           este é o meu curriculo online, espero que aqui você encontre as informações que precisar sobre mim. 
                         </p>
                       </div>
-                      <div class="download-CV_Gustavo_Moreno">
-                        <a href="cv/CV_Gustavo_Moreno.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
+                      <div class="download-CV_MATHEUS_MACEDO">
+                        <a href="ADICIONAR CURRICULO" class="btn btn-secondary" target="_blank">Download Currículo</a>
                       </div>
                     </div>
 
@@ -279,8 +279,8 @@
                   <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
-                        <div class="center download-CV_Gustavo_Moreno">
-                          <a href="cv/CV_Gustavo_Moreno.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
+                        <div class="center download-CV_MATHEUS_MACEDO">
+                          <a href="ADICIONAR PDF CURRICULO" class="btn btn-secondary" target="_blank">Download Currículo</a>
                         </div>
                       </div>
                     </div>
@@ -297,7 +297,8 @@
             <section class="pt-page" data-id="services">
               <div class="section-inner custom-page-content">
                 <div class="page-header color-1">
-                  <h2>Serviços Prestados</h2>
+                  <h2>Habilidades</h2>
+                  <p style="color: white; height: 10px;">Segue abaixo as experiências que obtive ao longo do meu tempo com Desenvolvimento</p>
                 </div>
                 <div class="page-content">
                   <!-- My Services -->
@@ -313,10 +314,10 @@
                         <div class="service-info">
                           <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                           <div class="service-image">
-                            <img src="ADICIONAR IMAGEM" alt="ADICIONAR INFORMAÇÃO DA IMAGEM" class="mCS_img_loaded">
+                            <img src="images/1200px-HTML5_logo_and_wordmark.svg.png" alt="HTML5" class="mCS_img_loaded">
                           </div>
-                          <h4>HTML</h4>
-                          <p>HTML</p>
+                          <h4>HTML5</h4>
+                          <p>Tenho experiência com Desenvolvimento HTML</p>
                         </div>
                       </div>
                     </div>
@@ -325,10 +326,10 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="ADICIONAR IMAGEM" alt="ADICIONAR DESCRIÇÃO" class="mCS_img_loaded">
+                            <img src="images/css.png" alt="CSS3" class="mCS_img_loaded">
                           </div>
-                          <h4>CSS</h4>
-                          <p>CSS</p>
+                          <h4>CSS3</h4>
+                          <p>Tenho experiência com CSS3</p>
                         </div>
                       </div>
                     </div>
@@ -337,10 +338,10 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="ADICIONAR IMAGEM" alt="ADICIONAR DESCRIÇÃO" class="mCS_img_loaded">
+                            <img src="images/SQL1.png" alt="SQL SERVER" class="mCS_img_loaded">
                           </div>
                           <h4>SQL SERVER</h4>
-                          <p>SQL SERVER</p>
+                          <p>Tenho experiência com SQL SERVER</p>
                         </div>
                       </div>
                     </div>
@@ -349,7 +350,7 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/hashtag.png" alt="C#" class="mCS_img_loaded">
+                            <img src="images/csharp-logo.png" alt="C#" class="mCS_img_loaded">
                           </div>
                           <h4>C#</h4>
                           <p>Conhecimento de programação com a Linguagem C#.</p>
