--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4">
                       <div class="photo">
-                        <img src="images\github-g.png" alt="Matheus Macedo">
+                        <img src="images/GitHub-Desktop-Logo.jpg" alt="Matheus Macedo">
                       </div>
                     </div>
 
@@ -110,7 +110,7 @@
                     </div>
                   </div>
                 </div>
-                
+
                 <div class="page-content">
                   <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
