--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       </div>
 
                       <div class="social-links">
-                        <a href="ADICIONAR LINK DO LINKEDIN" target="_blank"><i class="fa-brands fa-linkedin"></i>            
+                        <a href="https://linkedin.com/in/matheus-macedo-94b50a156" target="_blank"><i class="fa-brands fa-linkedin"></i>            
                           <a href="https://github.com/Matheus-byt" target="_blank"><i class="fa-brands fa-github"></i>
                       </div>
                     </div>
@@ -354,6 +354,18 @@
                           </div>
                           <h4>C#</h4>
                           <p>Conhecimento de programação com a Linguagem C#.</p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-sm-6 col-md-3">
+                      <div class="service-block"> 
+                        <div class="service-info">
+                          <div class="service-image">
+                            <img src="images/javascript.png" alt="C#" class="mCS_img_loaded">
+                          </div>
+                          <h4>JavaScript</h4>
+                          <p>Conhecimento de programação com a Linguagem JavaScript</p>
                         </div>
                       </div>
                     </div>
