--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Matheus Macedo</title>
+    <title>Joyce Ribeiro</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Curriculum vitae Matheus Macedo" />
+    <meta name="description" content="Curriculum vitae Joyce Ribeiro" />
     <meta name="keywords" content="curriculo, vitae, geek, university, git, github" />
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -36,7 +36,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <a href="index.html#home"><div class="site-title">Matheus <span>Macedo</span></div></a>
+            <a href="index.html#home"><div class="site-title">Joyce<span>Ribeiro</span></div></a>
           </div>
 
           <!-- Navigation -->
@@ -63,7 +63,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Matheus Macedo</div>
+          <div class="mobile-site-title">Joyce Ribeiro</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -86,26 +86,26 @@
                   <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4">
                       <div class="photo">
-                        <img src="images/GitHub-Desktop-Logo.jpg" alt="Matheus Macedo">
+                        <img src="images/GitHub-Desktop-Logo.jpg" alt="Joyce Ribeiro">
                       </div>
                     </div>
 
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
-                        <h1>Matheus Macedo</h1>
+                        <h1>Joyce Ribeiro</h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
-                            <div class="sp-subtitle">Desenvolvedor</div>
+                            <div class="sp-subtitle">Desenvolvedora</div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle">Aluno de Desenvolvimento de Sistemas</div>
+                            <div class="sp-subtitle">Aluna de Desenvolvimento Back-End</div>
                           </div>
                         </div>
                       </div>
 
                       <div class="social-links">
-                        <a href="https://linkedin.com/in/matheus-macedo-94b50a156" target="_blank"><i class="fa-brands fa-linkedin"></i>            
-                          <a href="https://github.com/Matheus-byt" target="_blank"><i class="fa-brands fa-github"></i>
+                        <a href="https://www.linkedin.com/in/joyce-ribeiro-90b826187" target="_blank"><i class="fa-brands fa-linkedin"></i>            
+                          <a href="https://github.com/joyribeirosilva" target="_blank"><i class="fa-brands fa-github"></i>
                       </div>
                     </div>
                   </div>
@@ -116,24 +116,24 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="about-me">
                         <div class="block-title">
-                          <h3>Quem é <span>Matheus?</span></h3>
+                          <h3>Quem é <span>Joyce?</span></h3>
                         </div>
-                        <p>Olá! Me chamo Matheus Macedo! Atualmente sou aluno de ADS e
+                        <p>Olá! Me chamo Joyce Ribeiro! Atualmente sou aluna de Desenvolvimento Back-End e
                           este é o meu curriculo online, espero que aqui você encontre as informações que precisar sobre mim. 
                         </p>
                       </div>
-                      <div class="download-CV_MATHEUS_MACEDO">
+                      <div class="download-CV_JOYCE_RIBEIRO">
                         <a href="ADICIONAR CURRICULO" class="btn btn-secondary" target="_blank">Download Currículo</a>
                       </div>
                     </div>
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Idade</span><span class="value">21</span></li>
-                        <li><span class="title">Nacionalidade</span><span class="value">Brasileiro</span></li>
+                        <li><span class="title">Idade</span><span class="value">27</span></li>
+                        <li><span class="title">Nacionalidade</span><span class="value">Brasileira</span></li>
                         <li><span class="title">Cidade/Estado</span><span class="value">Suzano, SP</span></li>
-                        <li><span class="title">E-mail</span><span class="value">mmacedo41@hotmail.com</span></li>
-                        <li><span class="title">Fone</span><span class="value">+5511 99921-9100</span></li>
+                        <li><span class="title">E-mail</span><span class="value">joyceribeirosilva1@gmail.com</span></li>
+                        <li><span class="title">Fone</span><span class="value">+5511 95705-6684</span></li>
                         <li><span class="title">Vaga</span><span class="value available">Disponível</span></li>
                       </ul>
                     </div>
@@ -163,29 +163,31 @@
                           <!-- Education 1 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Formação Acadêmica</h4>
-                            <span class="item-period">2022/Cursando</span>
-                            <span class="item-small">Universidade de Mogi das Cruzes UMC.</span>
-                            <p class="item-description">Cursando Analise e Desenvolvimento de Sistemas Pela Universidade de Mogi das Cruzes.</p>
+                            <span class="item-period">2023/Cursando</span>
+                            <span class="item-small">Cruzeiro do Sul | Unicid</span>
+                            <p class="item-description">Cursando Desenvolvimento de Back-End</p>
                           </div>
                           <!-- / Education 1 -->
 
-                          <!-- Education 2 -->
-                          <div class="timeline-item">
-                            <h4 class="item-title">Curso de Inglês</h4>
-                            <span class="item-period">2019 - 2020</span>
-                            <span class="item-small">Smart School</span>
-                            <p class="item-description">Cursei Inglês por um ano em uma escola técnica localizada em Suzano - SP</p>
+                           <!-- Education 2 -->
+                           <div class="timeline-item">
+                            <h4 class="item-title">Formação Acadêmica</h4>
+                            <span class="item-period">2020/2023</span>
+                            <span class="item-small">Analise e Desenvolvimento de Sistemas</span>
+                            <p class="item-description">Concluido a formação em julho de 2023</p>
                           </div>
                           <!-- / Education 2 -->
 
                           <!-- Education 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">INFORMÁTICA</h4>
-                            <span class="item-period">2018</span>
-                            <span class="item-small">SENAI</span>
-                            <p class="item-description">Concluido curso de informática no Senai no ano de 2018</p>
+                            <h4 class="item-title">Curso da Ada</h4>
+                            <span class="item-period">2020 - 2023</span>
+                            <span class="item-small">Ada Tech</span>
+                            <p class="item-description">Cursei durante 6 meses a linguagem de java do inicio ao avançado.</p>
                           </div>
                           <!-- / Education 3 -->
+
+                         
                         </div>
                       </div>
                     </div>
@@ -200,10 +202,27 @@
                           <!-- Experience 1 -->
                           <div class="timeline-item">
                             <h4 class="item-title">Técnico de Redes</h4>
-                            <span class="item-period">2020 - Atualmente</span>
+                            <span class="item-period">2021 - Atualmente</span>
                             <span class="item-small">TDGI</span>
-                            <p class="item-description">Atualmente estou a exercer o cargo de Técnico de Redes na TDGI.
-                              Tenho como objetivo resolver os chamados relacionados a tecnologia, desde problemas de domínio, configuração de email a problemas de HomeOffice(Conexão VPN).
+                            <p class="item-description">Responsável por: Atendimento Help Desk e Service Desk; •
+                              Gerenciamento dos chamados e análise de criticidade pela
+                              ferramenta Service Desk - Ocomon; • Montagem, manutenção e
+                              configuração de computadores e sistemas operacionais Windows em
+                              geral; • Cabeamento estruturado, montagem de rack e patch painel;
+                              •Instalação e configuração de CFTV; • Acesso remoto via VNC e
+                              MTSC (ferramenta nativa do Windows); • Procedimento de imagem
+                              de HD via aplicativo Symantec Ghost e Acronis True Image; •
+                              Atendimento ao Usuário e cadastro de contas ( AD ) , e-mails
+                              Configuração de e-mail (POP, IMAP e Exchange), acessos internet,
+                              configurações de serviços de acesso e segurança em servidores e
+                              estações de trabalho, Configuração de Impressoras; • Conhecimento
+                              em instalação e configuração de aplicativos empresariais como NICE
+                              Perform, CMS, Certificados A1/A3, entre outros; • Acompanhamento
+                              e Implantações a plano de mudanças e Ferramentas Corporativas; •
+                              Atendimento e acompanhamento a outros profissionais da área de
+                              informática para elucidar dúvidas sobre acessos a rede, alteração de
+                              configuração de Hardware, elaboração e manutenção de controles
+                              para recursos de rede e internet
                             </p>
                           </div>
                           <!-- / Experience 1 -->
@@ -298,7 +317,7 @@
               <div class="section-inner custom-page-content">
                 <div class="page-header color-1">
                   <h2>Habilidades</h2>
-                  <p style="color: white; height: 10px;">Segue abaixo as experiências que obtive ao longo do meu tempo com Desenvolvimento</p>
+                  <p style="color: rgb(234, 239, 240); height: 10px;">Segue abaixo as experiências que obtive ao longo do meu tempo com Desenvolvimento</p>
                 </div>
                 <div class="page-content">
                   <!-- My Services -->
